--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "requirejs": "~2.1.15",
-    "knockoutjs": "~3.2.0"
+    "knockoutjs": "~3.2.0",
+    "jasmine": "~2.1.3"
   }
 }
