--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "requirejs": "~2.1.15",
     "knockoutjs": "~3.2.0",
-    "jasmine": "~2.1.3"
+    "jasmine": "~2.1.3",
+    "requirejs-text": "~2.0.13"
   }
 }
